progreso en banner y navbarr + algunos retoques generales

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,7 +1,7 @@
 :root {
     --bg-color: #000000;
     --main-brand-color: #7700ff;
-    --main-brand-color: #bd83ff;
+    --main-brand-color: #b880f7;
     --secondary-brand-color: #09ff00;
     --main-text-color: #ffffff;
     --border-color: #8d8d8d;
