--- a/styles/banner.css
+++ b/styles/banner.css
@@ -25,8 +25,11 @@
         left:0;
 
         opacity:0.2;
-
-
+    }
+    @media screen and (width > 760px) {
+        .image {
+            background-image: url(../assets/piedras2.jpg);
+        }
     }
 }
 
