estructura general lista, footer terminado, página de proyectos casi lista

--- a/styles/common.css
+++ b/styles/common.css
@@ -2,11 +2,11 @@
     --bg-color: #000;
     --main-brand-color: #7700ff;
     --main-brand-color-light: #b880f7;
-    --secondary-brand-color: #09ff00;
-    --main-text-color: #fff;
+    --secondary-brand-color: #8f854a;
     --border-color: #8d8d8d;
     --input-bg-color: #baf3d6;
     --main-font-family: Arial, Helvetica, sans-serif;
+    --main-text-color: #fff;
     font-size: 20px;
 }
 
