--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,21 +1,15 @@
-/*.footer {
-    background-color: rgb(15, 15, 15);
-    margin: 80px 40px 0 40px;
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 5px;
-    padding: 10px 10px 10px 10px;
-}*/
-
 .footer {
-    text-align: center;
-    font-weight: 100;
-    font-style:italic;
-    font-size: 1rem;
-    
-    padding: 1em 0;
-    margin: 1em;
-
-    background-color: #222222;
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 5px;
+    /*font-size: 15px;*/ /*En caso de añadir texto*/
+    background: var(--secondary-brand-color);
+    position: relative;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em 0em 1em 0em; /*Creo que queda más fino dejando una fina línea abajo del todo*/
+}
+.img {
+    width: 50px;
+    margin: 5px;
 }
