--- a/styles/info.css
+++ b/styles/info.css
@@ -1,30 +1,28 @@
 .info {
-    width:70%;
+    width:100%;
     margin: 0 auto;
-    max-width: 768px; 
-    .assets {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        img {
-            width: 16em;
-            z-index: 2; /*para que la imagen esté delante*/
-        }
-        video{
-            top: 30px;
-            position: absolute;
-            width: 10em;
-            z-index: 1; /*para que la imagen esté detrás*/
-        }
-    }
+    max-width: 768px;
+    
 }
-
-/* El 768p es porque es un breakpoint a partir del cual ya es una resolución suficiente*/
 @media screen and (width > 768px) {
     .info {
         display: flex;
         flex-direction: row-reverse;
-        gap: 2.5sem;
+        gap: 20px;
         align-items: center;
+    }
+}
+
+
+
+@media (prefers-reduced-motion: no-preference) {
+    @keyframes fade-in-from-top {
+        0% {
+            opacity: 0;
+            transform: translateY(-100%);
+        } 
+        100% {
+            opacity: 1;
+        }
     }
 }
