--- a/styles/proyects.css
+++ b/styles/proyects.css
@@ -6,6 +6,7 @@
         width: 100%;
     }
     .list {
+        font-size: 12px;
         list-style: none;
         margin: 0;
         padding: 0;
