--- a/styles/components.css
+++ b/styles/components.css
@@ -6,13 +6,14 @@
     text-decoration: none;
     padding: 0.4rem;
     display: inline-block;
-    border-radius: 50px;
-    border: 1px solid var(--main-brand-color);
+    border-radius: 2px;
+    border: 1px solid white;
     transition: background-color 0.5s;
     /*Botón secundario*/
     &.secondary {
         background-color: transparent;
-        border: 1px solid var(--main-text-color);
+        border: 1px solid var(--border-color);
+        color:black;
     }
 }
 @media screen and (hover: hover) {
