--- a/styles/proyects.css
+++ b/styles/proyects.css
@@ -2,19 +2,28 @@
     width: 90%;
     margin: 0 auto;
     max-width: 900px;
-    img {
-        width: 100%;
+}
+.proyectos img {
+    width: 100%;
+    transition: transform 0.3s ease;
+}
+.proyectos .list {
+    font-size: 12px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(185px, 1fr));
+    gap: 10px;
+}
+.proyectos figure {
+    margin: 0;
+}
+@media screen and (hover: hover) {
+    .proyectos img:hover {
+        transform: scale(1.05);
     }
-    .list {
-        font-size: 12px;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(185px, 1fr));
-        gap: 10px;
-        figure {
-            margin: 0;
-        }
+    .pointer {
+        cursor: pointer;
     }
 }
