--- a/styles/form.css
+++ b/styles/form.css
@@ -5,5 +5,6 @@
     width: 100%;
     max-width: 420px;
     margin:  0 auto;
-    padding: 3rem 2rem;
+    padding: 1rem 2rem;
+    padding: 1rem;
     }
