--- a/styles/common.css
+++ b/styles/common.css
@@ -4,7 +4,7 @@
     --main-brand-color-light: #fd5454;
     --secondary-brand-color: #363636;
     --border-color: #fff;
-    --input-bg-color: #fff;
+    --input-bg-color: #ffffff;
     --main-font-family: Arial, Helvetica, sans-serif;
     --main-text-color: #fff;
     --secondary-text-color: #000;
@@ -33,7 +33,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     margin: 0;
     flex-direction: column;
     padding-top: 20rem;
