--- a/styles/common.css
+++ b/styles/common.css
@@ -5,7 +5,7 @@
     --secondary-brand-color: #363636;
     --border-color: #fff;
     --input-bg-color: #ffffff;
-    --main-font-family: Arial, Helvetica, sans-serif;
+    --main-font-family: "Roboto", Helvetica, sans-serif;
     --main-text-color: #fff;
     --secondary-text-color: #000;
     font-size: 20px;
