--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,5 @@
 .header{
-    position: sticky;
+    position: relative; /* Quiero que la navbar se vaya hacia arriba al hacer scroll*/
     top: 0;
     z-index: 99;
     background-color: var(--bg-color);
