Proyecto terminado. Pequeños ajustes realizados. Read Me adjunto. Creo que ya no necesita más cambios

--- a/styles/card404_500.css
+++ b/styles/card404_500.css
@@ -30,7 +30,7 @@
     background-color: #ff6b81;
 }
 
-/*Boton para volver*/
+/*Boton troll para volver*/
 .button-deadpool-troll {
     margin: 1px 0;
 }
