--- a/styles/header.css
+++ b/styles/header.css
@@ -3,12 +3,11 @@
     top: 0;
     z-index: 99;
     background-color: var(--bg-color);
-    display: flex; /* Ojo al tocar. Se ponen en una misma linea y así podré jugar con su disposición*/
+    display: flex;
     justify-content: space-between; /*cuidado*/
     align-items: center; /*cuidado*/
     padding: 1rem;
     height: 120px;
-
 
     .image {
         width: 40%;
