--- a/styles/error500.css
+++ b/styles/error500.css
@@ -6,7 +6,7 @@
     height: 100vh;
     position: relative; 
     text-align: center;
-    z-index: 1;
+    /*z-index: 1;*/
 }
 .error-message {
     font-size: 50px;
@@ -28,6 +28,8 @@
     width: 100%;
     max-width: 560px;
     margin-bottom: 20px;
+    z-index: 1;
+    opacity: 0.8;
 }
 .video div {
     padding-bottom: 56.25%; /* esto mantiene los 16:9 */
@@ -64,7 +66,6 @@
     height: 50vh; 
     object-fit: cover; 
     transform: translate(-50%, -50%);
-    opacity: 0.1;
     z-index: 0;
 }
 @media (min-width: 768px) {
