--- a/styles/spinners.css
+++ b/styles/spinners.css
@@ -1,5 +1,5 @@
 .barras {
-    margin: 0.8em;
+    margin-bottom: 0.8em;
     width: 100%;
     height: 50px;
     border: 1px solid white;
@@ -53,7 +53,7 @@
     color: white;
 }
 
-/* Animación para las barras */
+
 @keyframes relleno {
     0% {
         width: 150px;
@@ -63,18 +63,3 @@
         background-color: #fff;
     }
 }
-
-/*para encajar mejor las barras*/
-.barras-container {
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-@media screen and (max-width: 480px) {
-    .barras-container {
-        width: 100%; /* Ancho fijo para resoluciones pequeñas */
-        margin: 0 auto; /* Centra el contenedor */
-    }
-}
-
-
